syntax = "proto3";

package linkerd2.common.healthcheck;

option go_package = "github.com/linkerd/linkerd2/controller/gen/common/healthcheck";

enum CheckStatus {
    OK = 0;
    FAIL = 1;
    ERROR = 2;
}

message CheckResult {
    string SubsystemName = 1;
    string CheckDescription = 2;
    CheckStatus Status = 3;
    string FriendlyMessageToUser = 4;
}

message SelfCheckRequest {}

message SelfCheckResponse {
    repeated CheckResult results = 1;
}
